# livecoding_cg_wgpu

./: Cargo.toml  README.md
01_wgpu_setup/: Cargo.toml  README.md
02_noises/: Cargo.toml  README.md
03_camera/: Cargo.toml  README.md
03_camera/src/: app_state.rs  camera.rs  main.rs  shader.wgsl  vertex.rs
04_textures/: Cargo.toml  README.md
04_textures/src/: app_state.rs  camera.rs  main.rs  texture.rs  uniform.rs
04_textures/src/shaders/: shader.wgsl
1_basics/1_01_wgpu_setup/: Cargo.toml  README.md
1_basics/1_02_noises/: Cargo.toml
1_basics/1_02_noises/src/: app_state.rs  main.rs  shader.wgsl
src/: shader.wgsl  uniform.rs
