[package]
name = "step_03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.20.1"
winit = "0.29.15"
pollster = "0.3.0"
bytemuck = { version = "1.16.1", features = ["derive"] }
glam = "0.29.0"
tobj = "4.0.2"
project-root = "0.2.2"